--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.container {
+  background-color: #fcfcff;
+  align-items: center;
+  justify-content: center;
+}
+
+.box__container-one {
+  display: flex;
+  padding: 5px 40px;
+  gap: 75px;
+  margin-bottom: 10px;
+  align-items: center;
+  justify-content: center;
+  margin-top: 25px;
+}
+
+.box__container-two {
+  display: flex;
+  padding: 5px 40px;
+  margin-top: 15px;
+  gap: 75px;
+  align-items: center;
+  justify-content: center;
+}
+
+.heading-primary {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 48px;
+  letter-spacing: -0.24px;
+  color: #1b153d;
+  margin-left: 2rem;
+}
+
+.heading-secondary {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 48px;
+  letter-spacing: -0.24px;
+  color: #1b153d;
+  margin-left: 2rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .heading-primary {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 48px;
+    letter-spacing: -0.24px;
+    color: #1b153d;
+    margin-left: 2rem;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+}
+
+span {
+  display: block;
+}
+
+input {
+  color: #000;
 }
